--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.25.7",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
