--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-responsive-masonry": "^2.3.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
@@ -23,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
